--- a/loupe-browser/style.scss
+++ b/loupe-browser/style.scss
@@ -9,7 +9,12 @@ body {
   margin-top: 1em;
   text-align: center;
 }
+// https://uigradients.com/#Lunada
 body {
+  background: #5433FF;  
+  background: -webkit-linear-gradient(to right, #A5FECB, #20BDFF, #5433FF);  
+  background: linear-gradient(to right, #A5FECB, #20BDFF, #5433FF); 
+  
   letter-spacing: 0.01rem;
   line-height: 1.8; /* Globally adjust line height */
   font-size: 1rem;
@@ -17,11 +22,30 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
+  overflow: hidden;
 }
 
-
+$margin-top: 50px;
 .CodeMirror {
   font-family: 'Roboto Mono', monospace;
+  height: calc(100% - #{$margin-top*2} - #{10px*2});
+  width: auto;
+  margin: $margin-top 80px;
+  padding: 0px 10px 15px 15px;
+  border-radius: 10px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;;
+}
+
+.CodeMirror-sizer {
+  margin-top: 10px;
+}
+
+$background: #1e1e1e;
+
+.cm-s-vscode-dark.CodeMirror {
+  background: $background;
+  // background: transparent;
+  color: #e9e9e9;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
@@ -131,23 +155,21 @@ body {
   color: #808080;
 }
 
-.cm-s-vscode-dark.CodeMirror {
-  /* background: #1e1e1e; */
-  background: transparent;
-  color: #e9e9e9;
-}
+
+
+
 .cm-s-vscode-dark .CodeMirror-cursor {
   border-left: 1px solid #bebebe;
 }
 .CodeMirror-activeline-background {
-  background: #3a3a3a;
+  background: $background;
 }
 .cm-s-vscode-dark div.CodeMirror-selected {
   background: #1e496c;
 }
 .cm-s-vscode-dark .CodeMirror-gutters {
-  background: #252526;
-  border-right: 1px solid grey;
+  background: $background;
+  border-right: 1px solid $background;
   color: #606366;
 }
 .cm-s-vscode-dark span.cm-builtin {
