--- a/loupe-browser/style.scss
+++ b/loupe-browser/style.scss
@@ -39,13 +39,14 @@ $margin-top: 50px;
 .container {
   font-family: "Roboto Mono", monospace;
   background: $background;
-  margin: $margin-top 80px;
+  margin: $margin-top 150px;
   padding: 0px 15px 0px 15px;
   border-radius: 10px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   transition: width 2s;
   &.fullscreen {
     width: 100vw;
+    max-width: 900px;
     height: calc(100% - #{$margin-top * 2} - #{10px * 2});
   }
   &.resizeContainer {
